# homelab-builds

./: .gitignore  README.md
.github/workflows/: build.yml  lint.yml
homeGPT/: Dockerfile  README.md
homeGPT/pi/: check_audio.py  pi_audio.py
homeGPT/src/: PulseAudioHandler.py  RTPhandler.py  __main__.py  agent.py  asr.py  audio_test.py  gpt_client.py  listener.py  main.py  orchestrator.py  pico_listener.py  pyproject.toml  speaker.py  tried_listener.py
homeGPT/src/mcps/common/: functions.py  main.py  pyproject.toml  server.py
homeGPT/src/mcps/hass/: config.py  hass.py  main.py  pyproject.toml  server.py
homeGPT/tests/: openwakeword_test.py  pyproject.toml  udp_listener_audio_test.py  udp_speaker_audio_test.py
the_block/arduino/: platformio.ini
the_block/arduino/include/: include.h
the_block/arduino/src/: main.cpp  mpu.cpp  wifi_mqtt.cpp
the_block/server/: Dockerfile  pyproject.toml  requirements.txt
the_block/server/src/: calculate.py  homeassistant.py  mqtt5.py  the_block.py
